- Work on letter stuff from yesterday - Re-imported database to fix Wavemaker-generated code that was causing buid+run to fail. Files modified - [_viewForm,EditForm,cx2,LetterService,Letters.jar,pom.xml]

--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -1148,6 +1148,11 @@
                         show="bind:hasOperatingTimeError()"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow108">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn199">
+                        <wm-label padding="unset 0.5em" name="label135" class="text-danger"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow89">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn165">
                         <wm-composite name="composite9">
