Widgets.gridLetters.selecteditem.id Files modified - [_viewForm,EditForm,LetterService,pom.xml]

--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -1148,7 +1148,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow108">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn199">
-                        <wm-label padding="unset 0.5em" name="label135" class="text-danger"></wm-label>
+                        <wm-label padding="unset 0.5em" name="labelCallInOnly" class="text-danger" caption="bind:inspectionObject.callInMessage" show="bind:inspectionObject.callInOnly"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow89">
