--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -31,7 +31,8 @@
                                                 dataset="bind:Variables.CurrentMunicipalitySubdivisions.dataSet" datafield="All Fields"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn8">
-                                                <wm-label padding="unset 0.5em" name="labelSubdivisionType" caption="bind:Widgets.liveformGisrecords.formWidgets.subdivisions.datavalue.subdivisionType" class="h2"></wm-label>
+                                                <wm-label name="label2" caption="Subdivision Type" class="control-label col-xs-12"></wm-label>
+                                                <wm-label name="labelSubdivisionType" caption="bind:Widgets.liveformGisrecords.formWidgets.subdivisions.datavalue.subdivisionType" fontweight="bold"></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow5" padding="unset unset 4em unset">
